# bevy_playground

./: Cargo.toml
src/: main.rs  main_2d.rs  main_3d.rs
src/camera/: controller.rs  mod.rs  plugin.rs  settings.rs
src/hex/: mod.rs
src/hex/components/: hex_chunk.rs  hex_coord.rs  mod.rs
src/hex/input/: handlers.rs  mod.rs  plugin.rs
src/hex/rendering/: config.rs  mesh.rs  mod.rs  plugin.rs  systems.rs
src/hex/rendering/atlas/: color_tint_materials.rs  mod.rs  systems.rs
src/hex/rendering/components/: hex_tile.rs  hex_visuals.rs  mod.rs
src/hex/rendering/contour/: contour_config.rs  contour_path.rs  mod.rs  plugin.rs  systems.rs
src/hex/rendering/contour/plugins/: mod.rs  optimized_terrain_plugin.rs  organic_contour_plugin.rs
src/hex/rendering/contour/systems/: mod.rs  organic_contour_system.rs  process_terrain_generation_system.rs  terrain_generation_system.rs  utilities.rs
src/hex/rendering/contour/terrain/: generation_progress.rs  generation_stage.rs  generation_task.rs  mesh_data.rs  mod.rs  settings.rs
src/shared/types/: cell_data.rs  chunk_id.rs  mod.rs  terrain_type.rs
src/shared/types/triangle/: mod.rs  triangle.rs  triangle_id.rs
src/state/: mod.rs  plugin.rs  streaming.rs
src/state/cache/: mod.rs  world_cache.rs
src/state/components/: mod.rs  streaming_config.rs
src/ui/: generation_progress.rs  hud.rs  mod.rs  plugin.rs
