[package]
name = "playground"
version = "0.1.0"
edition = "2024"
authors = ["O'Brian"]
license = "MIT"

[[bin]]
name = "playground"
path = "src/main.rs"
# path = "src/main.rs"

[dependencies]
bevy = { version = "0.17.2", default-features = false, features = [
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_image",
    "bevy_input_focus",
    "bevy_mesh",
    "bevy_mesh_picking_backend",
    "bevy_log",
    "bevy_picking",
    "bevy_render",
    "bevy_sprite",
    "bevy_sprite_render",
    "bevy_sprite_picking_backend",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_ui_render",
    "bevy_winit",
    "bevy_dev_tools",
    "std",
    "multi_threaded",
    "default_font",
    "png",
] }

bevy_egui = "0.38.0"
bevy-inspector-egui = { version = "0.34.0" }
hexx = { version = "0.22", features = ["bevy"] }
image = "0.25"
noise = "0.9.0"
rayon = "1.7.0"
futures-lite = "2.6.1"

[features]
default = []
dev = ["bevy/dynamic_linking"]
